[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcos-open-science-demo"
version = "0.1.0"
description = "Open science demo scripts for PCOS inequality & modeling study"
authors = [{ name = "PCOS Study Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pcos", "inequality", "theil", "concentration-index", "health-economics", "reproducibility"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "statsmodels",
  "matplotlib",
  "seaborn",
  "scipy",
  "lifelines",
  "pymc",
  "tqdm"
]

[project.urls]
Homepage = "https://github.com/your-org/pcos-open-science"
Issues = "https://github.com/your-org/pcos-open-science/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["code*"]
